--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MomBookshelf</string>
+
+    <string name="title_collection">Collection</string>
+    <string name="title_profile">Profile</string>
 </resources>
