--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -2,9 +2,13 @@
 <resources>
 
     <string name="back_button">Retour</string>
+    <string name="edit_button">Editer</string>
+    <string name="add_book_button">Ajouter un livre</string>
+
     <string name="title_collection">Collection</string>
     <string name="title_profile">Profil</string>
     <string name="title_newbook">Nouveau livre</string>
+
     <string name="see_more">voir plus</string>
     <string name="last_book">Dernier ajout</string>
 </resources>
