--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">MomBookshelf</string>
 
-    <string name="none" translatable="false" />
-
     <string name="back_button">Back</string>
     <string name="edit_button">Edit</string>
     <string name="add_book_button">Add a book</string>
@@ -10,7 +8,7 @@
     <string name="title_collection">Collection</string>
     <string name="title_profile">Profile</string>
     <string name="title_newbook">New book</string>
-
+    <string name="title_book_detail">Detail</string>
 
     <string name="see_more">see more</string>
     <string name="last_book">Last book</string>
