--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,30 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">MomBookshelf</string>
+    <string name="app_name" translatable="false">Mom\'s Bookshelf</string>
 
-    <string name="back_button">Back</string>
-    <string name="edit_button">Edit</string>
-    <string name="add_book_button">Add a book</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_collection">Collection</string>
+    <string name="nav_profile">Profile</string>
 
     <string name="title_collection">Collection</string>
     <string name="title_profile">Profile</string>
     <string name="title_newbook">New book</string>
-    <string name="title_book_detail">Detail</string>
+    <string name="title_editbook">Edit book</string>
+    <string name="title_book_detail">Book detail</string>
+
+    <string name="back_button">Back</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="save_button">Save</string>
+    <string name="edit_button">Edit</string>
+    <string name="add_book_button">Add a book</string>
 
     <string name="see_more">see more</string>
     <string name="last_book">Last book</string>
+    <string name="search_placeholder">Title, author, ...</string>
+    <string name="genres">Genres</string>
+
+    <string name="add_book_title">Title</string>
+    <string name="add_book_author">Author</string>
+    <string name="add_book_published">Year</string>
+    <string name="add_book_description">Description</string>
 </resources>
